@@ -14,22 +14,27 @@
 		<summary lang="de">Eine familienfreundliche Überarbeitung von CHI3f's xTV Skin</summary>
 		<summary lang="el">Ένα ριμέικ του κελύφους xTV από τον CHI3f, κατάλληλο για όλη την οικογένεια.</summary>
 		<summary lang="en">A family friendly remake of CHI3f's xTV skin</summary>
+		<summary lang="es">Un remake familiar de la piel CHI3f xTV</summary>
+		<summary lang="fr_CA">Une nouvelle version plus familiale de l'habillage xTV conçu par CHI3f</summary>
 		<summary lang="gl">Unha nova versíon máis amigábel do tema CHI3f's xTV</summary>
 		<summary lang="hu">A CHI3f xTV felszínének családbarát verziója.</summary>
 		<summary lang="ms">Penghasilan semula kulit xTV CHI3f yang mesra keluarga</summary>
-		<summary lang="nl">een familievriendelijke nieuwe vers van CHI3f's xTV skin</summary>
+		<summary lang="nl">een familievriendelijke nieuwe versie van CHI3f's xTV skin</summary>
 		<summary lang="pl">Prosta w użyciu skórka bazowana na CHI3f's xTV</summary>
 		<summary lang="ru">Модификация скина CHI3f's xTV с дружелюбным интерфейсом.</summary>
+		<summary lang="sv">En familjevänlig version av CHI3f's xTV skal</summary>
 		<summary lang="zh">针对家庭使用友好的CHI3f的xTV皮肤重新制作版</summary>
 		<description lang="de">XTV-SAF ist ein "Front Row" ähnlicher Skin für XBMC. Es bietet eine vielzahl an Features, welche nicht im originalen AppleTV Interface zu finden sind. Alle diese Funktionen sind in einem Easy-to-use Formfaktor, in dem sich sowohl Kinder als auch Erwachsene sofort zurecht finden.</description>
 		<description lang="el">Το xTV-SAF είναι ένα κέλυφος για το XBMC παρόμοιο με το Front Row. Έχει ένα πλήθος ενημερωμένων χαρακτηριστικών τα οποία δεν ήταν διαθέσιμα στην αρχική έκδοση του AppleTV και στις εκδόσεις του xTV από τον CHI3f, και ενσωματώνει τα νέα χαρακτηριστικά του XBMC Eden. Όλα αυτά συνιστούν ένα απλό κέλυφος που θα γίνει αποδεκτό και από τη σύζυγο (Wife Acceptance Factor, WAF), το οποίο είναι ιδιαιτέρως εύχρηστο για παιδιά και ενήλικες που μπορούν με ευκολία να βρουν ό,τι αναζητούν.</description>
 		<description lang="en">xTV-SAF is a AppleTV inspired skin for XBMC. It provides a very light weight minimalist gui while also allowing access to a number of advanced XBMC features not available in the original AppleTV interface.</description>
+		<description lang="fr_CA">xTV-SAF est un habillage pour XBMC inspiré d'AppleTV. Il offre une IUG minimaliste très légère tout en permettant l'accès à de nombreuses fonctions avancées de XBMC non disponibles dans l'interface AppleTV originale.</description>
 		<description lang="gl">xTV-SAF e o antigo 'Front Row' agora como tema para XBMC. Fornece dun número de características actualizadas non dispoñíbeis no interface orixinal do AppleTV e está baseado no tema CHI3f's xTV para incluír as novas características do XBMC Eden. Unha forma (Factor) de que nenos e adultos atopen todo aquilo no que andan a procurar.</description>
 		<description lang="hu">Az xTV-SAF egy "Front Row" XBMC felszín. Számos olyan frissített szolgáltatásokat tartalmaz amik nem állnak rendelkezésre a korábbi változatban. Mindezt egyszerű, családbarát módon teszi elérhetővé a felhasználók számára, így a gyerekek és a felnőttek is könnyedén kezelhetik.</description>
 		<description lang="ms">xTV-SAF adalah 'Baris Hadapan' seakan kulit untuk XBMC. Ia menyediakan sebilangan fitur dikemaskini yang tidak tersedia dalam antaramuka asal AppleTV dan binaan pada kulit asalxTV CHI3f. Semuanya adalah bentuk (Faktor) Boleh Diterima Keluarga yang mudah untuk kanak-kanak dan dewasa mencari apa yang mereka kehendaki.</description>
 		<description lang="nl">Xtv-SAF is een 'eerste klas' soort ontwerp voor XBMC. het geeft een groot aantal van geüpdate functie die niet beschikbaar zijn in de originele AppleTV interface en Builds van het CHI3f's originele Xtv ontwerp. dit alles in een simpel, zeer gemakkelijke en acceptabele form (factor) dat zowel gemakkelijk is voor kinderen en volwassenen om te vinden waar ze naar zoeken.</description>
 		<description lang="pl">xTV-SAF jest skórką podobną do Front Row. Udostępnia dużo możliwości nieobecnych w oryginalnym interfejsie AppleTV. Bazuje na skórce xTV stworzonej przez CHI3f'a. Wszystko to w łatwy sposób, zarówno dla dzieci jak i dorosłych, umożliwia znalezienie tego, czego się szuka.</description>
 		<description lang="ru">xTV-SAF это обложка XBMC, которая имитирует интерфейс проигрывателя FrontRow от Apple. В ней есть большое количество опций и возможностей,  появившихся в XBMC Eden, которые вы не найдете в ни оригинальном интерфейсе AppleTV, ни во взятой за основу обложке CHI3f's xTV. Большое внимание уделено тому, чтобы сохранить простоту и интуитивность интерфейса. </description>
+		<description lang="sv">xTV-SAF är ett AppleTV-inspirerat skal för XBMC. Det tillhandahåller ett lättviktigt minimalistiskt gränssnitt men ger samtidigt tillgång till ett antal avancerade XBMC-funktioner som inte finns i originalgränssnittet för AppleTV.</description>
 		<description lang="zh">xTV-SAF 是一个与 'Front Row' 类似的XBMC皮肤. 与CHI3f创作的xTV skin相比,它提供了一些原先在AppleTV界面没有的改进特性. 这些对小朋友和家人来说都比较简单, 能够让他们容易找到需要的东西.</description>
 		<platform>all</platform>
 		<license>Licensed under the Apache License, Version 2.0</license>
