@@ -1,12 +1,16 @@
 [B]1.3.5[/B]
 - Reenabled tilting icons in List and Wall views, setting now accessable from "View-as" menu.
-- New home menu type "Icon".  User can now select from Gen1 ,2 or 3 AppleTV home menu types.
+- New home menu type "Icon".  User can now select from three home menu types
+  (Gen1 ,2 or 3 AppleTV home menu types).
 - Removed all remaining redundant strings.
 - Moved a number of common code blocks to the includes file to ease maintainabilty
   and to slightly reduce memory footprint.
 - Major code cleanup in prepartion for Gotham version of the skin.
-- Rewrite File stacking dialog.  Code was broken for a long time without anyone noticing, now works as intended.
+- Rewrite File stacking dialog.  Code was broken for a long time without anyone noticing,
+  thanks Ronnie (Transparency!) for borrowed code.
 - Improved navigation and clean up of screen layout for music info screens.
+- Navigation improved in a number of other screens and dialogs.
+- New languages added, Canadian French and Swedish.
 - Number of minor bug fixes.
 
 [B]1.3.4[/B]
